force-app/main/default/objects/CA_Consent__c/CA_Consent__c.object-meta.xml
<CustomObject>
    <label>CA Consent</label>
    <nameField>
        <displayFormat>CAC-{0000000}</displayFormat>
        <label>CA Consent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CA Consents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>