force-app/main/default/objects/CA_Consent__c/fields/Consent__c.field-meta.xml
<CustomField>
    <fullName>Consent__c</fullName>
    <label>Consent</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>