force-app/main/default/objects/CA_Consent__c/fields/ExKey__c.field-meta.xml
<CustomField>
    <fullName>ExKey__c</fullName>
    <label>ExKey</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>