force-app/main/default/objects/CA_Consent__c/fields/Last_Consent__c.field-meta.xml
<CustomField>
    <fullName>Last_Consent__c</fullName>
    <label>Last Consent</label>
    <type>DateTime</type>
</CustomField>