force-app/main/default/objects/CA_Consent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Consent__c</columns>
    <columns>User__c</columns>
    <columns>Last_Consent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>